// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test SpeedBlock should render correctly when has auto feeder vector speed warning 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      Speed
    </span>
    <div>
      MockConfigValueDisplay
      <p>
        inputId: 
        speed-input
      </p>
      <p>
        type: 
        default
      </p>
      <p>
        max: 
        900
      </p>
      <p>
        min: 
        0.5
      </p>
      <p>
        value: 
        87
      </p>
      <p>
        unit: 
        mm/s
      </p>
      <p>
        hasMultiValue: 
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        options: 
      </p>
      <button
        type="button"
      >
        MockConfigValueDisplayButton
      </button>
    </div>
    <input
      class="mock-config-slider"
      id="speed"
      max="900"
      min="0.5"
      step="0.1"
      type="range"
      value="87"
    />
    <div
      class="warning"
    >
      <div
        class="warning-icon"
      >
        <span
          aria-label="exclamation-circle"
          class="anticon anticon-exclamation-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="exclamation-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M464 688a48 48 0 1096 0 48 48 0 10-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        class="warning-text"
      >
        The cutting speed of Auto Feeder objects will be constrained to 30 mm/s. You can remove this limit at Preferences Settings.
      </div>
    </div>
  </div>
</div>
`;

exports[`test SpeedBlock should render correctly when has curve engraving data 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      Speed
    </span>
    <div>
      MockConfigValueDisplay
      <p>
        inputId: 
        speed-input
      </p>
      <p>
        type: 
        default
      </p>
      <p>
        max: 
        50
      </p>
      <p>
        min: 
        0.5
      </p>
      <p>
        value: 
        50
      </p>
      <p>
        unit: 
        mm/s
      </p>
      <p>
        hasMultiValue: 
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        options: 
      </p>
      <button
        type="button"
      >
        MockConfigValueDisplayButton
      </button>
    </div>
    <input
      class="mock-config-slider"
      id="speed"
      max="50"
      min="0.5"
      step="0.1"
      type="range"
      value="87"
    />
  </div>
</div>
`;

exports[`test SpeedBlock should render correctly when has low speed warning 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      Speed
    </span>
    <div>
      MockConfigValueDisplay
      <p>
        inputId: 
        speed-input
      </p>
      <p>
        type: 
        default
      </p>
      <p>
        max: 
        900
      </p>
      <p>
        min: 
        0.5
      </p>
      <p>
        value: 
        1
      </p>
      <p>
        unit: 
        mm/s
      </p>
      <p>
        hasMultiValue: 
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        options: 
      </p>
      <button
        type="button"
      >
        MockConfigValueDisplayButton
      </button>
    </div>
    <input
      class="mock-config-slider"
      id="speed"
      max="900"
      min="0.5"
      step="0.1"
      type="range"
      value="1"
    />
    <div
      class="warning"
    >
      <div
        class="warning-icon"
      >
        <span
          aria-label="exclamation-circle"
          class="anticon anticon-exclamation-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="exclamation-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M464 688a48 48 0 1096 0 48 48 0 10-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        class="warning-text"
      >
        Low speed might cause burning of the material.
      </div>
    </div>
  </div>
</div>
`;

exports[`test SpeedBlock should render correctly when has vector warning 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      Speed
    </span>
    <div>
      MockConfigValueDisplay
      <p>
        inputId: 
        speed-input
      </p>
      <p>
        type: 
        default
      </p>
      <p>
        max: 
        300
      </p>
      <p>
        min: 
        0.5
      </p>
      <p>
        value: 
        87
      </p>
      <p>
        unit: 
        mm/s
      </p>
      <p>
        hasMultiValue: 
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        options: 
      </p>
      <button
        type="button"
      >
        MockConfigValueDisplayButton
      </button>
    </div>
    <input
      class="mock-config-slider"
      id="speed"
      max="300"
      min="0.5"
      step="0.1"
      type="range"
      value="87"
    />
    <div
      class="warning"
    >
      <div
        class="warning-icon"
      >
        <span
          aria-label="exclamation-circle"
          class="anticon anticon-exclamation-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="exclamation-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M464 688a48 48 0 1096 0 48 48 0 10-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        class="warning-text"
      >
        The cutting speed of vector path objects will be constrained to 20 mm/s. You can remove this limit at Preferences Settings.
      </div>
    </div>
  </div>
</div>
`;

exports[`test SpeedBlock should render correctly when module is 4C 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      Speed
    </span>
    <div>
      MockConfigValueDisplay
      <p>
        inputId: 
        speed-input
      </p>
      <p>
        type: 
        default
      </p>
      <p>
        max: 
        45
      </p>
      <p>
        min: 
        0.5
      </p>
      <p>
        value: 
        1
      </p>
      <p>
        unit: 
        mm/s
      </p>
      <p>
        hasMultiValue: 
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        options: 
        [{"label":"Slowest","value":5},{"label":"Slow","value":15},{"label":"Regular","value":25},{"label":"Fast","value":35},{"label":"Fastest","value":45}]
      </p>
      <button
        type="button"
      >
        MockConfigValueDisplayButton
      </button>
    </div>
    <input
      class="mock-config-slider"
      id="speed"
      max="45"
      min="0.5"
      step="0.1"
      type="range"
      value="1"
    />
  </div>
</div>
`;

exports[`test SpeedBlock should render correctly when type is panel-item 1`] = `
<div>
  <div>
    MockObjectPanelItem
    <div>
      id: 
      speed
    </div>
    <div>
      content: 
      <button
        class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded number-item display-btn"
        type="button"
      >
        <span>
          <span
            style="white-space: nowrap;"
          >
            87
          </span>
        </span>
      </button>
    </div>
    <div>
      label: 
      Speed
    </div>
  </div>
</div>
`;

exports[`test SpeedBlock should render correctly when unit is inches 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      Speed
    </span>
    <div>
      MockConfigValueDisplay
      <p>
        inputId: 
        speed-input
      </p>
      <p>
        type: 
        default
      </p>
      <p>
        max: 
        300
      </p>
      <p>
        min: 
        0.5
      </p>
      <p>
        value: 
        87
      </p>
      <p>
        unit: 
        in/s
      </p>
      <p>
        hasMultiValue: 
      </p>
      <p>
        decimal: 
        2
      </p>
      <p>
        options: 
      </p>
      <button
        type="button"
      >
        MockConfigValueDisplayButton
      </button>
    </div>
    <input
      class="mock-config-slider"
      id="speed"
      max="300"
      min="0.5"
      step="0.1"
      type="range"
      value="87"
    />
  </div>
</div>
`;

exports[`test SpeedBlock should render correctly when unit is mm 1`] = `
<div>
  <div
    class="panel default"
  >
    <span
      class="title"
    >
      Speed
    </span>
    <div>
      MockConfigValueDisplay
      <p>
        inputId: 
        speed-input
      </p>
      <p>
        type: 
        default
      </p>
      <p>
        max: 
        300
      </p>
      <p>
        min: 
        0.5
      </p>
      <p>
        value: 
        87
      </p>
      <p>
        unit: 
        mm/s
      </p>
      <p>
        hasMultiValue: 
      </p>
      <p>
        decimal: 
        1
      </p>
      <p>
        options: 
      </p>
      <button
        type="button"
      >
        MockConfigValueDisplayButton
      </button>
    </div>
    <input
      class="mock-config-slider"
      id="speed"
      max="300"
      min="0.5"
      step="0.1"
      type="range"
      value="87"
    />
  </div>
</div>
`;
